Fixed SidebarItem Shift Arrow Spacing, scalable spacing, still need tooltip rework

--- a/src/components/builder/DeckBuilder.scss
+++ b/src/components/builder/DeckBuilder.scss
@@ -6,3 +6,8 @@
     @include swamp_theme_fg2;
     min-height: 100px;
 }
+
+.cf-spacing{
+    padding-left: 6rem !important;
+    padding-right: 6rem !important;
+}
