--- a/src/components/builder/SideBarItem.scss
+++ b/src/components/builder/SideBarItem.scss
@@ -38,9 +38,9 @@
     background-color: whitesmoke;
     padding: 3px;
     opacity: 100% !important; //For some reason, something is setting it to zero
-    position:absolute;
-    left: -8%;
-    z-index: -1;
+    position: absolute;
+    left: -30px;
+    z-index: 0;
 }
 
 .sb-item-arrow {
